fixed spacing

--- a/app/assets/stylesheets/finances.css.scss
+++ b/app/assets/stylesheets/finances.css.scss
@@ -30,7 +30,7 @@ select {
 	/*padding-left: 10px;*/
 	max-width: 260px;
 	padding-bottom: 10px;
-	margin-top: 300px;
+	margin-top: 295px;
 	border-left: 1px #d3d6db solid;
 	border-right: 1px #d3d6db solid;
 	border-bottom: 1px #d3d6db solid;
@@ -50,7 +50,7 @@ select {
 	/*padding-left: 10px;*/
 	max-width: 260px;
 	padding-bottom: 10px;
-	margin-top: 40px;
+	margin-top: 30px;
 	border: 1px #d3d6db solid;
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
@@ -62,10 +62,10 @@ select {
 	background-color: #EFEFEF;
 	z-index: 0;
 	/*margin-left: 300px;*/
-	max-width: 640px;
+	min-width: 630px;
 	float: right;
 	margin-bottom: 10px;
-	margin-top: 40px;
+	margin-top: 30px;
 	padding-bottom: 10px;
 	border: 1px #d3d6db solid;
 	-webkit-border-radius: 2px;
@@ -286,7 +286,7 @@ select {
 }
 
 .companylist {
-	max-height: 70vh;
+	max-height: 75vh;
 	overflow: scroll;
 }
 
